[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-epson-pj"
version = "0.1.0"
authors = [
  { name="Meir Miyara", email="meir.miyara@email.com" },
]
description = "Unfolded Circle integration for Epson projectors"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]